Enhance README with test scenarios and conclusion
Added test scenarios and conclusion sections to README.